maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:26: error: not found: value c
	c=c+1
        ^Escaper:31: error: not found: value c
	c=c-1
        ^